# wilson-score-kde

./: .gitignore  README.md  pyproject.toml
cpp/Wrapper/: CMakeLists.txt  WSKDEWrapper.cpp  WSKDEWrapper.h
cpp/Wrapper/cmake/: WSKDEWrapperLibConfig.cmake
cpp/example/: CMakeLists.txt  main.cpp
examples/bayesian_optimization/: bayesian_optimization.py  optimization_example.py  util.py
examples/simple_1D/: simple_1D.py
examples/simple_2D/: simple_2D.py
wskde/: wskde.py
